# rustptty

./: .gitignore  Cargo.toml  README.md
assets/: main.rs
src/: main.rs
src/apis/: call_request.rs
src/helpers/: cli.rs  general.rs
src/models/agent_basic/: basic_agent.rs  basic_trait.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
