[package]
name = "rustptty"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
crossterm = "0.29.0"
async-trait = "0.1.88"
webbrowser = "1.0.4"
strum = "0.27.1"
strum_macros = "0.27.1"
ai_functions = "0.1.1"
